--- a/.github/workflows/main_cosmicworks-web.yml
+++ b/.github/workflows/main_cosmicworks-web.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  API_ENDPOINT: ${{ vars.API_ENDPOINT }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
